--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "koa2-cors",
-  "version": "2.0.0",
+  "version": "2.0.2",
   "description": "cors middleware for koa2",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "NODE_ENV=production rm -rf dist & babel src -d dist"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,15 @@
   "bugs": {
     "url": "https://github.com/zadzbw/koa2-cors/issues"
   },
-  "homepage": "https://github.com/zadzbw/koa2-cors#readme"
+  "homepage": "https://github.com/zadzbw/koa2-cors#readme",
+  "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-register": "^6.18.0"
+  },
+  "dependencies": {
+    "babel-runtime": "^6.20.0"
+  }
 }
