--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,12 @@
     "stage-0"
   ],
   "plugins": [
-    "transform-runtime"
+    [
+      "transform-runtime",
+      {
+        "helpers": false,
+        "polyfill": false
+      }
+    ]
   ]
 }
