--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koa2-cors",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "description": "cors middleware for koa2",
   "main": "dist/index.js",
   "scripts": {
@@ -26,8 +26,7 @@
     "babel-cli": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.18.0",
-    "babel-preset-stage-0": "^6.16.0",
-    "babel-register": "^6.18.0"
+    "babel-preset-stage-0": "^6.16.0"
   },
   "dependencies": {
     "babel-runtime": "^6.20.0"
