--- a/.babelrc
+++ b/.babelrc
@@ -1,15 +1,4 @@
 {
-  "presets": [
-    "es2015",
-    "stage-0"
-  ],
-  "plugins": [
-    [
-      "transform-runtime",
-      {
-        "helpers": false,
-        "polyfill": false
-      }
-    ]
-  ]
+  "presets": [],
+  "plugins": []
 }
