--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koa2-cors",
-  "version": "2.0.4",
+  "version": "2.0.5",
   "description": "cors middleware for koa2",
   "main": "dist/index.js",
   "scripts": {
@@ -23,12 +23,6 @@
   },
   "homepage": "https://github.com/zadzbw/koa2-cors#readme",
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-stage-0": "^6.16.0"
-  },
-  "dependencies": {
-    "babel-runtime": "^6.20.0"
+    "babel-cli": "^6.18.0"
   }
 }
