--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "2.0.5",
   "description": "cors middleware for koa2",
   "main": "dist/index.js",
+  "files": [
+    "src/index.js",
+    "dist/index.js"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "NODE_ENV=production rm -rf dist & babel src -d dist"
@@ -24,5 +28,8 @@
   "homepage": "https://github.com/zadzbw/koa2-cors#readme",
   "devDependencies": {
     "babel-cli": "^6.18.0"
+  },
+  "engines": {
+    "node": ">= 7.6.0"
   }
 }
